<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/control_padding"
    android:gravity="center"
    android:visibility="gone"
    tools:context=".wordGame.GameActivity">

    <TextView
        android:id="@+id/text_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/finish_label"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/finish_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/initial_score"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_restart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/retry"
            android:elevation="@dimen/elevation_low"
            android:text="@string/restart_label" />

        <Button
            android:id="@+id/button_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/return_menu"
            android:elevation="@dimen/elevation_low"
            android:text="@string/main_menu_label" />
    </LinearLayout>
</LinearLayout>