<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/phase_padding"
    android:layout_gravity="center_horizontal"
    tools:context=".wordGame.GameActivity">


    <com.nhaarman.supertooltips.ToolTipRelativeLayout
        android:id="@+id/tooltip_topframe"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <TextView
        android:id="@+id/text_phase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/elevation_low"
        android:gravity="center"
        android:text="@string/initial_phase"
        android:textSize="36sp"
        android:textStyle="bold"
        app:fontFamily="casual" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/phase_padding">

        <TextView
            android:id="@+id/text_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/status_margin"
            android:elevation="@dimen/elevation_low"
            android:text="@string/initial_score"
            android:textSize="24sp"
            android:textStyle="bold"
            app:fontFamily="casual" />

        <TextView
            android:id="@+id/text_timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/elevation_low"
            android:text="@string/initial_timer"
            android:textSize="24sp"
            android:textStyle="bold"
            app:fontFamily="casual" />
    </LinearLayout>


</LinearLayout>